summative.moria.Moria.scala.error
Compilation error:
Moria:4: error: value prendBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value prendBiscuit'?
  }prendBiscuit()
   ^Moria:7: error: value retourne is not a member of Unit
possible cause: maybe a semicolon is missing before `value retourne'?
  }retourne()
   ^