summative.moria.Moria.scala.code
while(estFaceMur() == false) {
  while (estSurBiscuit() == false) {
    avance()
  }prendBiscuit()
  while (estSurBiscuit() == false) {
    retourne()
  }retourne()
  poseBiscuit
}